<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/plan" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/bmi1" />
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_meet"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/meetDietician" />
        </menu>
    </item>

</menu>
