<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cvIBW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            android:layout_margin="4dp">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvIBW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal5"
                    android:padding="4dp"
                    android:text="@string/what_is_ibw"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <EditText
                    android:id="@+id/etAge"
                    android:inputType="number"
                    android:layout_margin="8dp"
                    android:layout_width="fill_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"/>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/tvSex"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/sexQue"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:padding="8dp" />

                    <Spinner
                        android:id="@+id/sp1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:entries="@array/sex"
                        android:prompt="@string/test" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cvHealth"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:layout_margin="4dp"
            card_view:cardCornerRadius="8dp">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/tv2"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textColor="@color/teal5"
                    android:text="@string/HealthQuestion"
                    android:padding="4dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/sp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_margin="16dp"
                    android:entries="@array/health_history"
                    android:prompt="@string/test" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:padding="4dp"
            android:layout_gravity="right"
            android:layout_margin="35dp"
            android:background="@color/teal5"/>

    </LinearLayout>
</ScrollView>