<?xml version="1.0" encoding="utf-8"?>

<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/scrollView"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:scrollbars="none">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityL"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="@string/question"
        android:textColor="@color/teal7"
        android:padding="4dp"
        android:layout_margin="8dp"/>

    <RelativeLayout
        android:id="@+id/ll2"
        android:padding="4dp"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/breakfastQue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textColor="@color/colorBlack"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/timeBreakfast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/breakfastQue"
            android:padding="8dp"
            android:hint="@string/frequency"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:textAppearance="?android:textAppearanceMedium"  />

        <CheckBox
            android:id="@+id/cbQuest1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/breakfastQue"
            android:layout_alignEnd="@+id/breakfastQue"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll3"
        android:padding="4dp"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/launchQue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2"
            android:textColor="@color/colorBlack"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/cbModerate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/launchQue"
            android:gravity="center"
            android:hint="@string/frequency"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="4dp"
        android:layout_margin="8dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dinnerQue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4"
            android:textColor="@color/colorBlack"
            android:textAppearance="?android:textAppearanceMedium"  />
        <EditText
            android:id="@+id/etDinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dinnerQue"
            android:gravity="center"
            android:hint="@string/frequency"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <CheckBox
            android:id="@+id/cdDinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/dinnerQue"
            android:layout_alignEnd="@+id/dinnerQue"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="4dp"
        android:layout_margin="8dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dinnerTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question5"
            android:textColor="@color/colorBlack"
            android:textAppearance="?android:textAppearanceMedium"  />

        <EditText
            android:id="@+id/timeDinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dinnerTime"
            android:padding="8dp"
            android:textColor="@color/colorBlack"
            android:textAppearance="?android:textAppearanceMedium"  />
    </RelativeLayout>

    <Button
        android:id="@+id/submitAL"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@color/teal4"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:padding="4dp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>
</LinearLayout>
</ScrollView>